# c_messages

./: .gitignore  defaultMessage.py  getData.py  main.py  mainMessage.py  processData.py  pyproject.toml  run.sh  startMessage.py  writeMessages.py
messageGenerators/: defaultMessage.py  mainMessage.py  startMessage.py
