[tool.poetry]
name = "c-messages"
version = "0.1.0"
description = ""
authors = ["AgricolaJKB <64554282+AgricolaJKB@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
mariadb = "^1.1.6"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
